--- a/index.html
+++ b/index.html
@@ -1,7 +1,181 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<head>
+<meta charset="utf-8">
+<title>Tom Designs</title>
+<link href="css/style.css" rel="stylesheet" type="text/css">
+<link id="color" href="css/accent.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+<script src="https://use.fontawesome.com/b4892c3853.js"></script>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<main>
+		<section class="header" id="header">
+			<div class="navbar">
+				<h1 class="textdark navbtn">TomDesigns</h1>
+				<ul>
+					<li>
+						<a onClick="about()">ABOUT</a>
+					</li>
+					<li>
+						<a onClick="services()">SERVICES</a>
+					</li>
+					<li>
+						<a onClick="portfolio()">PORTFOLIO</a>
+					</li>
+					<li>
+						<a onClick="contact()">CONTACT</a>
+					</li>
+				</ul>
+			</div>
+			<div class="wrapper">
+				<h1 class="textdark">Hey, I'm Tom</h1>
+				<h2 class="textdark">Designer and hardware specialist</h2>
+				<button class="btnaccent" onClick="services()">LEARN MORE</button>
+			</div>
+			
+		</section>
+		<section class="about accent about_trigger" id="about">
+			<h1 class="textlight">About</h1>
+			<p class="textlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+			<p class="textlight">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+		</section>
+		<section class="services services_trigger" id="services">
+			<h1 class="textdark">Services</h1>
+			<div class="wrapper">
+				<div class="image">
+					<img src="images/mockups/20170917_165439_nexus5x-portrait.png">
+				</div>
+				<div class="text">
+					<ul>
+						<li>
+							<h2 class="textaccent">Graphic Design</h2>
+							<p class="textdark">Graphic design Graphic design Graphic design Graphic design Graphic design</p>
+						</li>
+						<li>
+							<h2 class="textaccent">Motion Design</h2>
+							<p class="textdark">Graphic design Graphic design Graphic design Graphic design Graphic design</p>
+						</li>
+						<li>
+							<h2 class="textaccent">Web Design</h2>
+							<p class="textdark">Graphic design Graphic design Graphic design Graphic design Graphic design</p>
+						</li>
+						<li>
+							<h2 class="textaccent">Social Media</h2>
+							<p class="textdark">Graphic design Graphic design Graphic design Graphic design Graphic design</p>
+						</li>
+						<li>
+							<h2 class="textaccent">Hardware support</h2>
+							<p class="textdark">Graphic design Graphic design Graphic design Graphic design Graphic design</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="portfolio" id="portfolio">
+			<h1 class="textdark">Portfolio</h1>
+			<div class="wrapper">
+				<div class="item">
+					<img src="images/portfolio/logo mockup.png">
+					<h1 class="textlight">Grizzly Strength</h1>
+					<h2 class="textlight">Logo & Mockup</h2>
+				</div>
+				<div class="item">
+					<img src="images/portfolio/render.png">
+					<h1 class="textlight">Earth</h1>
+					<h2 class="textlight">Low-polygon style</h2>
+				</div>
+				<div class="item2">
+					<h1 class="textlight">...Seems empty?</h1>
+					<h2 class="textlight">Everyone has to start somewhere, right?</h2>
+				</div>
+			</div>
+		</section>
+		<!--<section class="contact accent" id="contact">
+			<h1 class="textlight">Contact</h1>
+		</section>-->
+		<section class="footer">
+			<ul>
+				<li>Index</li>
+				<li><a href="#header">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#services">Services</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+			<ul>
+				<li>Follow</li>
+				<li><a href="https://twitter.com/tommitchelmore_" target="_blank">Twitter</a></li>
+				<li><a href="https://www.facebook.com/tom.mitchelmore.5" target="_blank">Facebook</a></li>
+				<li><a href="https://www.snapchat.com/add/txm.m" target="_blank">Snapchat</a></li>
+			</ul>
+			<ul>
+				<li>FAQ</li>
+				<li><a href="#footer">Legal</a></li>
+				<li><a href="#footer">Payment</a></li>
+				<li><a href="#footer">Contact</a></li>
+			</ul>
+		</section>
+		
+
+<!--		<div class="navtoggle">
+			<i class="fa fa-bars fa-3x"></i>
+		</div>-->
+		<div class="nav">
+			<div class="wrapper">
+				<ul>
+					<a href="#header"><li>Home</li></a>
+					<a href="#about"><li>About</li></a>
+					<a href="#services"><li>Services</li></a>
+					<a href="#portfolio"><li>Portfolio</li></a>
+					<a href="#contact"><li>Contact</li></a>
+				</ul>
+			</div>
+		</div>
+		
+		
+		<div class="style-switcher">
+			<div class="style-switcher-toggle">
+				<i class="fa fa-gear fa-2x fa-spin-hover" style="color: #ffffff;"></i>
+			</div>
+			<div class="style-switcher-block">
+				<div class="wrapper">
+					<div class="item" id="blue" onClick="blue()" style="background: #1E88E5;">
+					</div>
+					<div class="item" id="red" onClick="red()" style="background: #F44336;">
+					</div>
+					<div class="item" id="darkblue" onClick="darkblue()" style="background: #3F51B5;">
+					</div>
+					<div class="item" id="pink" onClick="pink()" style="background: #E91E63;">
+					</div>
+					<div class="item" id="teal" onClick="teal()" style="background: #009688;">
+					</div>
+					<div class="item" id="orange" onClick="orange()" style="background: #F4511E;">
+					</div>
+					<div class="item" id="green" onClick="green()" style="background: #43A047;">
+					</div>
+					<div class="item" id="purple" onClick="purple()" style="background: #673AB7;">
+					</div>
+					<div class="item" id="grey" onClick="grey()" style="background: #607D8B;">
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
+<script src="js/plugins/scrollmagic/ScrollMagic.js"></script>
+<script src="js/plugins/scrollmagic/debug.addIndicators.min.js"></script>
+<script src="js/plugins/scrollmagic/animation.gsap.js"></script>
+<script src="js/main.js"></script>
+<script src="js/nav.js"></script>
+<script src="js/styleswitcher.js"></script>
+<script src="js/random.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" integrity="sha256-H3cjtrm/ztDeuhCN9I4yh4iN2Ybx/y1RM7rMmAesA0k=" crossorigin="anonymous"></script>
 </body>
 </html>
